--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
    <div class="container light-red">
    <center>
-   <h2>Calcul de l'IMC</h2>
+   <h1>Calcul de l'Indice de Masse Corporelle</h1>
    </center>
 
 
@@ -24,7 +24,10 @@
       <label for="poids">Poids</label>
       <input type="text" class="form-control" id="Poids" name="Poids" placeholder="Poids en Kg">
       </div>
-      <button type="submit" class="btn btn-default">Calculer</button>
+      <br>
+      <center>
+         <button type="submit" class="btn btn-primary btn-lg">Calculer</button>
+      </center>
    </form>
 
    </div>
